@@ -48,6 +48,14 @@ UTEST_BEGIN("runtime.expr", tokenizer)
         UTEST_ASSERT_MSG(t.text_value()->equals_ascii(s), "Error testing token: %s", s);
     }
 
+    void ck_color(Tokenizer &t, const char *s)
+    {
+        printf("  checking token: %s\n", s);
+        token_t tok = t.get_token(TF_GET | TF_COLOR);
+        UTEST_ASSERT_MSG(tok == TT_COLOR, "Error testing token: %s", s);
+        UTEST_ASSERT_MSG(t.text_value()->equals_ascii(s), "Error testing token: %s", s);
+    }
+
     void ck_int(Tokenizer &t, ssize_t value)
     {
         printf("  checking integer: %d\n", int(value));
@@ -79,7 +87,7 @@ UTEST_BEGIN("runtime.expr", tokenizer)
     void test_sign_tokens()
     {
         static const char *tokens =
-                "( ) [ ] { } & && | || ! ^ ^^ ~ + - * ** / % < > <= >= != <> = == <=> ? : ; ,";
+                "( ) [ ] { } & && | || ! ^ ^^ ~ + - * ** / % < > <= >= != <> = == <=> ? : ; , # @ ( )";
 
         io::InStringSequence sq;
         UTEST_ASSERT(sq.wrap(tokens, "UTF-8") == STATUS_OK);
@@ -119,6 +127,10 @@ UTEST_BEGIN("runtime.expr", tokenizer)
         ck_token(t, ":", TT_COLON);
         ck_token(t, ";", TT_SEMICOLON);
         ck_token(t, ",", TT_COMMA);
+        ck_token(t, "#", TT_SHARP);
+        ck_token(t, "@", TT_AT);
+        ck_token(t, "(", TT_LBRACE);
+        ck_token(t, ")", TT_RBRACE);
 
         UTEST_ASSERT(t.get_token(TF_GET) == TT_EOF);
     }
@@ -138,6 +150,7 @@ UTEST_BEGIN("runtime.expr", tokenizer)
                 "ex db "
                 "bareword "
                 "true false null " // Parse this as barewords
+                "@112233 #123 " // Parse this as colors
             ;
 
         io::InStringSequence sq;
@@ -224,6 +237,9 @@ UTEST_BEGIN("runtime.expr", tokenizer)
         ck_bareword(t, "true");
         ck_bareword(t, "false");
         ck_bareword(t, "null");
+
+        ck_color(t, "@112233");
+        ck_color(t, "#123");
 
         UTEST_ASSERT(t.get_token(TF_GET) == TT_EOF);
     }
